# sheaf

./: .gitignore  CHANGELOG.md  CONTRACT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  publish-pypi.yml  publish-validation.yml  publish.yml
docs/: CONTRACT.md
examples/: README.md  clustering_comparison.rs  embedding_clustering.rs  forecast_reconciliation.rs  hierarchical_conformal.rs  neural_sheaf_diffusion.rs  raptor_retrieval.rs  sheaf_clustering.rs  sheaf_rmt.rs  sheaf_spectral.rs
sheaf-python/: Cargo.toml  README.md  cohera.pyi  pyproject.toml
sheaf-python/src/: lib.rs
sheaf-python/tests/: test_reconciliation.py
src/: distribution_distance.rs  error.rs  learnable_sheaf.rs  lib.rs  metrics.rs  reconciliation.rs  sheaf_laplacian.rs
src/cluster/: dbscan.rs  hierarchical.rs  it_dendrogram.rs  kmeans.rs  mod.rs  spectral.rs
src/community/: knn_graph.rs  leiden.rs  louvain.rs  mod.rs
src/hierarchy/: conformal.rs  hierarchy.rs  mod.rs  validate.rs
